style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'abelregular';
    src: url('/fonts/abel-regular-webfont.woff2') format('woff2'),
         url('/fonts/abel-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

.container {
    font-family: Arial, Helvetica, sans-serif;
    display: grid;
    grid-template-columns: 1fr 4fr;
    min-height: 100vh;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

.container div {
    padding: 8px;
    font-family: Arial;
    font-size: 18px;
}

div .header {
    padding: 0px;
}

div .header-section {
    padding: 0px;
}

div .greeting-section {
    padding: 2px;
}

div .name {
    padding: 0px;
}

div .header-main {
    padding: 0px;
}

.header-main {
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
}

.header {
    font-weight: bold;
    grid-column-start: 2;
    grid-row-start: 1;
    height: 180px;
    background: white;
    margin: 10px;  
}

.header-section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 70px;
    color: black;
}

.searchbar {
    position: relative;
    display: flex;
    min-width: 100px;
    margin-top: 14px;
}

.searchbar i {
    position: absolute;
    top: 17px;
    left: 8px;
    font-size: 20px;
}

.searchbar input[type=text] {
    font-size: 15px;
    flex-grow: 1;
    flex-shrink: 1;
    margin-left: 25px;
    border: 1px solid grey;
    border-radius: 6px;
    height: 24px;
}

.search {
    border: 1px solid grey;
    border-radius: 6px;
    height: 24px;
    width: 100%;
    padding: 2px 20px 4px 20px;
}

.alert-name-section {
    width: 300px;
    display: grid;
    grid-template-columns: repeat(3, minmax(100px, 200px));
    padding: 0px;
    margin: 8px;
}

.icon, .small-avatar {
    justify-self: end;
    color: black;
    margin-right: 8px;
}

.name {
    grid-column-start: 3;
    color: black;
}

.greeting-section {
    display: flex;
    justify-content: space-between;
    height: 100px;
    color: black;
}

.avatar {
    display: grid;
    grid-template-columns: 80px 1fr;
    padding: 0px;
}

.buttons {
    max-height: 80px;
    display: flex;
    flex-direction: row;
    color: rgba(96, 107, 117, 1);
}

.sidebar-menu {
    background-color: #312e35;
    grid-row: 1 / 3;
    background: rgb(1,1,1);
    background: linear-gradient(131deg, rgba(1,1,1,1) 0%, rgba(61,91,117,1) 50%);
}

.dashboard {
    margin-top: 2vh;
    display: grid;
    grid-template-columns: 60px 100px;
    grid-template-rows: 60px 1fr;
    gap: 10px;
    min-width: 225px;
    color: white;
}

.dashboard i {
    justify-self: center;
    font-size: 25px;
    color:rgba(127, 190, 245, 1);
}

.dashboard h2 {
    font-size: 30px;
    color: rgba(127, 190, 245, 1);
    font-family: 'abelregular';
}

.menu-items {
    grid-row: 2;
    width: 180px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(12, 1fr);
    gap: 10px;
}

.menu-items p {
    font-family: 'abelregular';
    font-weight: bold;
    font-size: 22px;
}

.main {
    background-color: gainsboro;
    grid-row: 2;
    grid-column: 2;
    display: grid;
    grid-template-columns: 2fr 1fr;
    height: 100vh;
}

.card-section {
    grid-column: 1;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    /* grid-template-rows: repeat(auto-fit, minmax(3, 1fr));  */
    /* grid-template-rows: fit-content; */
    gap: 15px;
}

.card {
    background-color: white;
    border-radius: 6px;
    border-left-width: 6px;
    border-left-style: solid;
    border-left-color: rgba(127, 190, 245, 1);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 8px 0 rgba(0,0,0,0.19);

}

.right-section {
    padding: 8px;
    display: grid;
    grid-template-rows: .15fr 1fr .15fr 1fr;
}

.announcements {
    font-size: medium;
    background-color: white;
    border-radius: 12px; 
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

#trending, #announcements {
    position: relative;
    text-align: center;
    top: 25%;
    font-size: 20px;
    font-weight: bold;
    color: rgb(13, 22, 31);

}

.announcement-items {
    background-color: white;
    
}

.announcement-items p {
    box-shadow: 0 8px 6px -6px rgba(0,0,0,0.2);
    margin: 20px;
    text-align: center;
    padding: 4px;
}

.title {
    font-size: large;
    font-weight: bolder;
}

.trending {
    background-color: white;
    border-radius: 12px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

.trending-items p {
    display: flex;
    /* align-items: center; */
    justify-content: space-between;
    text-align: left;
    font-size: 22px;
    margin: 8px;
}

button {
    width: 80px; 
    padding: 8px;
    font-size: 16px;
    border-radius: 8px;
    margin: 8px;
}

.new, .upload, .share {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    background-color: rgba(101, 151, 194, 0.774);
    font-weight: bold;
    border-style: none;
}

.new:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.3), 0 18px 50px 0 rgba(0,0,0,0.19);
}

.upload:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.3), 0 18px 50px 0 rgba(0,0,0,0.19);
}
.share:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.3), 0 18px 50px 0 rgba(0,0,0,0.19);
}

